--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FHIRClientJSON"
 uuid = "41c3f962-d225-4afd-879a-c18106b4395d"
 authors = ["Dilum Aluthge", "Rhode Island Quality Institute", "contributors"]
-version = "0.1.0"
+version = "0.1.0-DEV"
 
 [compat]
 julia = "1.4"
