--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,20 @@ uuid = "41c3f962-d225-4afd-879a-c18106b4395d"
 authors = ["Dilum Aluthge", "Rhode Island Quality Institute", "contributors"]
 version = "0.1.0-DEV"
 
+[deps]
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+
 [compat]
+HTTP = "0.9"
+JSON3 = "1.5.1"
 julia = "1.4"
 
 [extras]
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["HTTP", "JSON3", "Test"]
