--- a/Project.toml
+++ b/Project.toml
@@ -9,14 +9,18 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 
 [compat]
+BSON = "0.2.6"
+BrokenRecord = "0.1.3"
 HTTP = "0.9"
 JSON3 = "1.5.1"
 julia = "1.4"
 
 [extras]
+BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+BrokenRecord = "bdd55f5b-6e67-4da1-a080-6086e55655a0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["HTTP", "JSON3", "Test"]
+test = ["BSON", "BrokenRecord", "HTTP", "JSON3", "Test"]
